[gd_scene load_steps=5 format=3 uid="uid://b7gsqt4cmfvy8"]

[ext_resource type="Script" path="res://Scripts/Unit.gd" id="1_fnf0i"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_brevo"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kovw2"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqqx3"]
resource_local_to_scene = true

[node name="Artillery" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_fnf0i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_brevo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kovw2")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_fqqx3")

[node name="AttackTimer" type="Timer" parent="."]
process_callback = 0

[node name="HPProgressBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = 23.0
offset_right = 21.0
offset_bottom = 28.0
value = 100.0
show_percentage = false

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
